--- a/css/style.css
+++ b/css/style.css
@@ -57,15 +57,18 @@ header, .navbar {
 
 #mainSlider .carousel-inner, #mainSlider .carousel-item {
     height: 90vh;
+   
 }
 
 #mainSlider .carousel-caption {
     top: 30%;
+   
 }
 
 #mainSlider .carousel-caption h2 {
     font-size: 50px;
     margin-bottom: 30px;
+    
 }   
 
 #mainSlider .carousel-caption p {
@@ -73,6 +76,7 @@ header, .navbar {
     font-weight: 300;
     margin-bottom: 100px;
     color: white;
+  
 }
 
 .main-btn {
@@ -428,4 +432,91 @@ header, .navbar {
 #copy-area .container a:hover {
     text-decoration: none;
     color: #444;
+}
+
+/* responsive */
+
+@media(max-width: 768px) {
+
+    /* geral */
+    .cointainer {
+        padding: 20px 0;
+    }
+
+    /* slider */
+
+    #mainSlider .carousel-inner, #mainSlider .carousel-item {
+        height: auto;
+    }
+
+    #mainSlider .carousel-caption h2 {
+        font-size: 28px;
+    }
+
+    #mainSLider .carousel-caption p {
+        font-size: 18px;
+        margin-bottom: 40px;
+    }
+
+    .carousel-caption {
+        left: 10%;
+        right: 10%;
+    }
+
+    /* about */
+
+    #about-area img {
+        margin-top: 100px;
+    }
+
+    /* data */
+
+    .circle-box div {
+        padding: 0 10px;
+    }
+
+    #data-area p {
+        font-size: 18px;
+    }
+
+    /* team */
+
+    .card-title {
+        font-size: 14px;
+    }
+
+    .card-title {
+        font-size: 12px;
+    }
+
+    /* apply */ 
+
+    #apply-area .apply-box {
+        padding:  50px 25px;
+    }
+
+    /* news */
+
+    #news-area p {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #email-input {
+        width: 70%;
+    }
+
+    #call-area {
+        margin-top: 30px;
+    }
+
+    #call-area .container {
+        padding: 30px;
+    }
+
+    #call-area p, #call-area #call-btn {
+        font-size: 16px;
+    }
+
 }
